<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@drawable/btncontinuar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Inicio" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="vertical" android:id="@+id/gridLayout">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/img_descripccion"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/txt_mnj_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:text="@string/mnj_inicio"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1f92c2" />

        <EditText
            android:id="@+id/txt_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" android:gravity="center">
        </EditText>

        <EditText
            android:id="@+id/txt_contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword" android:gravity="center"/>

        <TextView
            android:id="@+id/btn_continuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/btn_continuar"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#007cfa"
            android:typeface="sans" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FB"
                android:id="@+id/button" android:layout_alignParentBottom="true" android:layout_alignRight="@+id/gridLayout"
                android:layout_alignEnd="@+id/gridLayout"
                android:layout_gravity="center_horizontal" android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/btn_crear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|bottom"
            android:layout_marginTop="50dp"
            android:layout_row="8"
            android:text="@string/btn_crear"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#54585d" android:textSize="15dp"/>

        <TextView android:id="@+id/btn_licencia" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_column="0" android:layout_gravity="center_horizontal|right" android:layout_marginTop="50dp"
                  android:layout_row="8" android:text="@string/btn_licencia"
                  android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#54585d"
                  android:textSize="15dp"/>
        <TextView
            android:id="@+id/btn_tutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_row="8"
            android:text="@string/btn_ayuda"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#54585d" android:textSize="15dp"/>

    </GridLayout>

</RelativeLayout>