<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CrearCuenta" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/txt_usuario"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="80dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/imageView" android:background="@drawable/docente"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <EditText
                        android:id="@+id/txt_nombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nombre"/>
                    <EditText
                        android:id="@+id/txt_apellidocrearcuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/apellido" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="120dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="120dp">
                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:id="@+id/imageView2" android:adjustViewBounds="false"
                        android:background="@drawable/correo"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="120dp">
                    <EditText
                        android:id="@+id/txt_correo"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/correo"
                        android:inputType="textEmailAddress" />
                    <EditText
                        android:id="@+id/txt_contra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/contrasena"
                        android:inputType="textPassword" />
                    <EditText
                        android:id="@+id/txt_confir_contra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confir_contrasena"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/btn_crear"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </LinearLayout>

</RelativeLayout>
