<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarClase" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_addclass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/txt_addclass"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp">
                <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/imageView" android:background="@drawable/informacion"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <EditText
                        android:id="@+id/txt_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/nombre" >

                        <requestFocus />
                    </EditText>
                    <EditText
                        android:id="@+id/txt_descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/descripcion" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                    <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:id="@+id/imageView2" android:background="@drawable/limite"/>
                    <EditText
                        android:id="@+id/txt_ausencias"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/txt_ausencias"
                        android:inputType="number" android:layout_gravity="bottom"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="37dp">
                    <TextView
                        android:id="@+id/txt_nombre_archivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.58"
                        android:text="@string/txt_nombre_archivo"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#77a647"
                        android:textStyle="bold"
                        android:typeface="sans" />
                </LinearLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <Button
                        android:id="@+id/btn_archivo"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="70dp"
                        android:layout_height="68dp"
                        android:background="@drawable/csv" android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_ayuda"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/btn_ayuda"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#77a647"
                        android:textStyle="bold"
                        android:typeface="sans" android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btn_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/btn_crear"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtayuda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="37dp"
            android:gravity="center"
            android:text="@string/txtayuda2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>

</RelativeLayout>